k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: sugamdocker35/docker-test:v4
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
