k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onetimesecret-ingress
spec:
  rules:
    - host: api.onetimesecret.babulal.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onetimesecret-service
                port:
                  number: 8080
